footer added with links

--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
   </head>
   <body>
     <script src="index.js"></script>
+    <footer>
+      This AI project is coded by<a href="https://github.com/"> Ariana M. </a
+      >and open-sourced on
+      <a href="https://github.com/aam214/poem-generator-ai">Github</a>
+    </footer>
   </body>
 </html>
