Added basic HTML.

--- a/index.html
+++ b/index.html
@@ -7,11 +7,24 @@
     <title>AI Poem Generator</title>
   </head>
   <body>
+    <main>
+    <h1>American Poetry Generator</h1>
+    <form>
+      <input type="text" placeholder="Enter keywords" autofocus required />
+      <input type="submit" autocomplete="off" />
+    </form>
+    <p>
+    <div class="poem">Whose woods these are I think I know.
+    </br>His house is in the village though; </br>He will not see me stopping here     
+    </div>
+    </p>
+    </main>
     <script src="index.js"></script>
     <footer>
       This AI project is coded by<a href="https://github.com/"> Ariana M. </a
       >and open-sourced on
-      <a href="https://github.com/aam214/poem-generator-ai">Github</a>
+      <a href="https://github.com/aam214/poem-generator-ai">Github</a> and live
+      on <a href="https://poem-generator-ai.netlify.app/">Netlify</a>.
     </footer>
   </body>
 </html>
