--- a/index.html
+++ b/index.html
@@ -7,21 +7,23 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bitter&display=swap" rel="stylesheet">
+<script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <title>AI Poem Generator</title>
   </head>
   <body>
   
     <header>
     <h1>American Poetry Generator<div class="emoji">🖋️</div>
-     <form>
+     <form id="searching">
       <input type="text" placeholder="Enter keywords" autofocus required class="type"/>
       <input type="submit" autocomplete="off" class="click" />
     </form>  
     </h1>
   </header>
     <main>
-    <div class="poem"><em>Whose woods these are I think I know.
-    </br>His house is in the village though; </br>He will not see me stopping here     
+    <div class="poem" id="poem"><em>Whose woods these are I think I know.
+    </br> </br>     
     </em></div>
     </p>
   </main>
