Added AI API and improved CSS for AI API.

--- a/index.html
+++ b/index.html
@@ -14,17 +14,15 @@
   <body>
   
     <header>
-    <h1>American Poetry Generator<div class="emoji">🖋️</div>
+    <h1>American Poetry Generator<div class="emoji">🖋️📖</div>
      <form id="searching">
-      <input type="text" placeholder="Enter keywords" autofocus required class="type"/>
+      <input type="text" placeholder="Enter keywords" autofocus required autocomplete="off" class="type" id="instructions"/>
       <input type="submit" autocomplete="off" class="click" />
     </form>  
     </h1>
   </header>
     <main>
-    <div class="poem" id="poem"><em>Whose woods these are I think I know.
-    </br> </br>     
-    </em></div>
+    <div class="poem" id="poem"></div>
     </p>
   </main>
     <footer>
