--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
   <body>
   
     <header>
-    <h1>American Poetry Generator<div class="emoji">📖</div>
+    <h1>American Poetry Generator<div class="emoji">🖋️📖</div>
      <form id="searching">
       <input type="text" placeholder="Enter keywords" autofocus required autocomplete="off" class="type" id="instructions"/>
       <input type="submit" autocomplete="off" class="click" />
     </form>  
     </h1>
   </header>
-    <main>
-    <div class="poem" id="poem">🖋️</div>
+    <main id="box">
+    <div class="poem" id="poem"></div>
     </p>
   </main>
     <footer>
